--- a/frog.html
+++ b/frog.html
@@ -11,7 +11,7 @@
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  
 }
 
 
@@ -27,6 +27,20 @@
   display: none;
   overflow: hidden;
   background-color: #f1f1f1;
+}
+
+@media screen and (min-width: 360px) {
+  .collapsible,.content {
+    
+	font-size: 15px;
+  }
+}
+
+@media screen and (max-width:359px)  {
+  .collapsible,.content {
+   
+	font-size: 10px;
+  }
 }
 </style>
 
